# gjango_homework_1

./: .env.sample  contacts.html  home.html  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blogpost_contacts.html  blogpost_delete.html  blogpost_detail.html  blogpost_home.html  blogpost_list.html
blog/templates/blog/includes/: blogpost_card.html  inc_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py  fill.py
catalog/migrations/: 0001_initial.py  0002_category_description.py  0003_alter_category_options_alter_product_options_and_more.py  0004_alter_product_category.py
catalog/templates/: base.html  contacts.html  home.html
catalog/templates/catalog/: base.html  contacts.html  home-body.html  home-content.html  home-head.html  home.html  logged_out.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  product_list_by_category.html  products_list.html  register.html
catalog/templates/catalog/includes/: inc_menu.html  product_card.html
catalog/templates/catalog/registration/: login.html
config/: settings.py  urls.py
fixtures/: catalog.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  register.html
