[tool.poetry]
name = "gjango-homework-1"
version = "0.1.0"
description = ""
authors = ["Polyaaaaaa <polinasatrajkina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
psycopg2 = "^2.9.10"
psycopg = "^3.2.3"
black = "^24.10.0"
mypy = "^1.14.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
redis = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
